# riscv-uart-debugger

./: .gitignore  .gitmodules  CHANGELOG  INSTALL  Makefile  README.md  bootstrap.sh  configure.ac  install  readme.md  update
client/: INSTALL  Makefile  compile_commands.commands.json  compile_commands.json
client/src/: cli.c  cli.h  ctrlr.c  ctrlr.h  data.c  debug.c  debug.h  file_io.c  file_io.h  main.c  serial.c  serial.h  types.h  uthash.h  util.c  util.h
design/: debugger-multicycle.sv  debugger-pipeline.sv  debugger.sv  mcu_controller.sv  uart_rx.sv  uart_rx_word.sv  uart_tx.sv  uart_tx_word.sv
doc/: Makefile  protocol.tex
doc/figures/: blackbox.xml  pipeline_db.drawio
doc/man/: rvdb
doc/tex/: protocol.tex
examples/: term.s
man/: Makefile.am  rvdb.1
module/design/: controller_fsm.sv  ctrlr_fsm.sv  debug_ctrlr.sv  mcu_controller.sv  serial_db_drvr.sv  serial_driver.sv  uart_rx.sv  uart_rx_word.sv  uart_tx.sv  uart_tx_word.sv
module/testbench/: db_wrapper.sv  serial_board_testbench.sv  serial_hw_testbench.sv  serial_testbench.sv  sseg.sv
sim/testbench/: ctlr_testbench.sv  (+1 more)
src/: Makefile.am  cli.c  cli.h  data.c  data.h  debug.c  debug.h  file_io.c  main.c  pollLib.c  pollLib.h  serial.c  serial.h  types.h  util.c  util.h
src/.clangd/index/: cli.c.25DFEA20B560BDCA.idx  data.h.6A2E1B840B20915A.idx  debug.c.51E722EAE0232D9B.idx  debug.h.47E0D86EFFFEEAED.idx  file_io.c.1CBA5C92B85B3785.idx  serial.c.6C227EB249C8C4D5.idx  serial.h.CFBCCE846A9D535A.idx  util.c.1BC3ED60C6603764.idx  util.h.5A5A0FBC77D0C3A8.idx
uart-db/: open-ports
(+13 files in other folders)
